# playwright-failure-analyzer-demo

./: .gitignore  CLAUDE.md  LICENSE  PLAYGROUND.md  README.md  package-lock.json  package.json  playwright.config.js
.github/: AI_SETUP.md
.github/workflows/: auto-fix.yml  benchmark-models.yml  test-all-passing.yml  test-intentional-failures.yml  test-with-ai-analysis.yml
dagger/: .gitignore  dagger.json  pyproject.toml
dagger/src/: __init__.py  confidence_scorer.py  fix_generator.py  main.py  pr_creator.py  test_runner.py
dagger/test-data/: sample-failures.json
docs/: AI_MODELS_2025.md
scripts/: transform-playwright-results.js
tests/: easy-fixes.spec.js  hard-fixes.spec.js  medium-fixes.spec.js  sample-fail.spec.js  sample-pass.spec.js
tests/solutions/: easy-fixes-solution.spec.js  hard-fixes-solution.spec.js  medium-fixes-solution.spec.js
