[project]
name = "playwright-auto-fixer"
version = "0.1.0"
description = "Dagger module for auto-fixing Playwright test failures"
requires-python = ">=3.11"

dependencies = [
    "litellm>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.entry-points."dagger.mod"]
main_object = "src.main:PlaywrightAutoFixer"
